tests/trybuild/fail/unit_variant.stderr
error: unit variants do not support #[derive(StackError)]
 --> tests/trybuild/fail/unit_variant.rs:5:5
  |
5 |     First,
  |     ^^^^^
